<?php

namespace Xima\XimaTypo3Calendar\Domain\Model\Api;

enum EventLanguage: string
{
    case ALL = '';
    case DE = 'de';
    case EN = 'en';
}
