@startuml

package "XimaTypo3Calendar" {

class Calendar {
    + name: string <<required>>
    + description: string
}

class CalendarEntry {
    + title: string <<required>>
    + start: DateTime <<required>>
    + end: DateTime
    + allDay: boolean
    + recordType: string
}

class Event {
    + title: string <<required>>
    + status: EventStatus
    + statusMessage: string
    + approvalDate: DateTime
    + language: EventLanguage
    + description: string
    + publishToWebsite: boolean
    + publishToFeed: boolean
    + publishDate: Date
}

class Timeslot #white {
}

class Holiday #white{
}

class Organizer {
    + name: string <<required>>
}

class Location {
    + name: string <<required>>
}

class EventAppointment {
    + description: string
    + speakers: string
    + type: EventAppointmentType
    + onlineLink: string
    + directions: string
    + canceled: boolean
    + requiresRegistration: boolean
    + registrationLink: string
    + registrationDeadline: Date
    + fee: string
    + address: string
    + additionalInformation: string
    + url: string
}

class Requirement {
    + title: string <<required>>
    + description: string
}

class RequirementBooking {
    + requirement: Requirement
    + amount: number
    + start: DateTime
    + end: DateTime
    + note: string
}

}


class sys_file_reference {
}

class fe_users {
}

class be_user {
+ notifyReview: boolean
+ notifyLive: boolean
+ notifyCategories: category
}

note top of be_user
Calendar permissions (per group):
publish_live_events, view_all_events
end note

class sys_category {
}


enum EventStatus {
DRAFT: 0
REVIEW: 1
LIVE: 2
REJECTED: 3
}

enum EventLanguage {
ALL: ''
DE: de
EN: en
}

enum EventAppointmentType {
IN_PERSON: inPerson
ONLINE: online
HYBRID: hybrid
}

Calendar "1" -- "*" CalendarEntry

note top of Event
Events only appear
in the calendar
through their appointments
end note

note top of CalendarEntry
Calendar entries can be
of different types
end note

CalendarEntry <|-- EventAppointment
CalendarEntry <|-- Timeslot
CalendarEntry <|-- Holiday

CalendarEntry "1" -- "*" RequirementBooking : requirements

Event "*" -- "1" Organizer
Event "*" -- "1" sys_category: categories
Event "1" -- "1..*" EventAppointment
Event "1" -- "*" sys_file_reference : previewImage
Event "1" -- "*" sys_file_reference : files
Event "*" -- "*" fe_users : owner
Event "*" -- "1" be_user : ownerBeUser

EventAppointment "*" -- "1" Location
EventAppointment "*" -- "*" fe_users : hosts
EventAppointment "1" -- "*" sys_file_reference : files

fe_users "1" -- "*" Requirement : responsible

Requirement "1" -- "*" RequirementBooking

be_user "*" -- "*" sys_category : notifyCategories

@enduml
